amm_namespace.yml
apiVersion: v1
  kind: Namespace
  metadata: 
    name: amm
    labels: 
      name: development
