webgoodby.yml
apiVersion: v1
kind: Service
metadata:
  name: webgoodby
  labels:
    name: webgoodby
    owner: chatchai
    version: "1.0"
    module: WebServer
    environment: development
spec:
  selector:
    name: webgoodby
    owner: chatchai
    version: "1.0"
    module: WebServer
    environment: development

  ports:
   - port: 8080
     name: http
     targetPort: 8080
     protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webgoodby
  labels:
    name: webgoodby
    owner: chatchai
    version: "1.0"
    module: WebServer
    environment: development
spec:
  replicas: 1
  selector:
    matchLabels:
      name: webgoodby
      owner: chatchai
      version: "1.0"
      module: WebServer
      environment: development
  template:
    metadata:
      labels:
        name: webgoodby
        owner: chatchai
        version: "1.0"
        module: WebServer
        environment: development
    spec:
      containers:
        - name: webgoodby
          image: chatapazar/goodby1
          ports:
          - containerPort: 8080
            protocol: TCP
