webhello.yml
apiVersion: v1
kind: Service
metadata:
  name: webhello
  namespace: aam
  labels:
    name: webhello
    owner: chatchai
    version: "1.0"
    module: WebServer
    environment: development
spec:
  selector:
    name: webhello
    owner: chatchai
    version: "1.0"
    module: WebServer
    environment: development

  ports:
   - port: 8080
     name: http
     targetPort: 8080
     protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: aam
  name: webhello
  labels:
    name: webhello
    owner: chatchai
    version: "1.0"
    module: WebServer
    environment: development
spec:
  replicas: 1
  selector:
    matchLabels:
      name: webhello
      owner: chatchai
      version: "1.0"
      module: WebServer
      environment: development
  template:
    metadata:
      labels:
        name: webhello
        owner: chatchai
        version: "1.0"
        module: WebServer
        environment: development
    spec:
      containers:
        - name: webhello
          image: chatapazar/hello1
          ports:
          - containerPort: 8080
            protocol: TCP
